Resolves: fdo#79142 When Creating Styles - The 2nd One Always Replaces the 1st

regression from 0c17ccc493d0c7a80f37600dae76a09a119bef78

I think it might actually make more sense for SetName to always Reindex
and have another SetNameNoReindex for selective use where its known
safe to get away with it

Change-Id: I6bf7e1f45130f741954ab525b838f3ac5ff61a89